[package]
name = "mdbook-enviornments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = "4.1.8"
mdbook = "0.4.28"
pulldown-cmark = "0.9.2"
regex = "1.7.1"
semver = "1.0.17"
tinytemplate = "1.2.1"
serde_json = "1.0.94"

[dependencies.serde]
version = "1"
features = ["derive"]
